BusOne01/src/objects/Benefit_Design_Line_vod__c.object
<CustomObject>
    <fields>
        <fullName>BOT_Benefit_Design_ID__c</fullName>
        <description>To store the BOT Formulary ID. It is used for BOT internal reference.</description>
        <label>Benefit Design ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Benefit_Design__c</fullName>
        <description>To store benefit design name like 2 tier or 3 tier etc</description>
        <label>Benefit Design</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Product_ID__c</fullName>
        <description>To store the BOT Drug Id. It is used for BOT internal reference.</description>
        <label>Formulary Product ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Is_BOT_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created by BusinessOne technologies. This field is used to identify the record created by BOT or Veeva.</description>
        <label>Is BOT Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOT_Market__c</fullName>
        <description>To pull market from the Formulary Product object</description>
        <formula>TEXT(Product_vod__r.Market_vod__c)</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>BOT_Benefit_Design_Line</fullName>
        <active>true</active>
        <description>It is created by BusinessOne Technologies Inc and used to store BOT Benefit design records with drugs.</description>
        <label>BOT_Benefit Design Line</label>
    </recordTypes>
</CustomObject>